# junobid

./: Cargo.toml  Makefile  NOTICE  README.md
.cargo/: config
.circleci/: config.yml
artifacts/: checksums.txt  checksums_intermediate.txt  juno_bid-aarch64.wasm
schema/: juno_bid.json
scripts/: deploy_testnet.sh  schema.sh
src/: admins.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  state.rs  tests.rs
ts/: codegen.ts  package.json
ts/types/: Bid.client.ts  Bid.message-composer.ts  Bid.react-query.ts  Bid.types.ts
